WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
CLOSED FIXED
36569
SQLStatementErrorCallback's return value needs to be converted to a boolean
https://bugs.webkit.org/show_bug.cgi?id=36569
Summary
SQLStatementErrorCallback's return value needs to be converted to a boolean
Dumitru Daniliuc
Reported
2010-03-24 18:12:57 PDT
Basically, we need to revert
http://trac.webkit.org/changeset/54981
. I have just talked to Hixie again, and he agreed that we should convert SQLStatementErrorCallback's return value to a boolean, instead of treating false as false, and everything else as true. This means that values such as undefined (no return value), or 0, or "false" will all be treated as false, as a Javascript developer might expect.
Attachments
patch
(11.10 KB, patch)
2010-03-24 18:59 PDT
,
Dumitru Daniliuc
dumi
: commit-queue-
Details
Formatted Diff
Diff
patch
(11.60 KB, patch)
2010-03-24 20:36 PDT
,
Dumitru Daniliuc
dumi
: commit-queue-
Details
Formatted Diff
Diff
patch
(12.30 KB, patch)
2010-03-25 12:55 PDT
,
Dumitru Daniliuc
dglazkov
: review+
dumi
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Dumitru Daniliuc
Comment 1
2010-03-24 18:59:26 PDT
Created
attachment 51578
[details]
patch
WebKit Review Bot
Comment 2
2010-03-24 19:06:21 PDT
Attachment 51578
[details]
did not build on chromium: Build output:
http://webkit-commit-queue.appspot.com/results/1183025
Dumitru Daniliuc
Comment 3
2010-03-24 20:36:24 PDT
Created
attachment 51587
[details]
patch Should fix the Chromium build problems.
Dumitru Daniliuc
Comment 4
2010-03-25 12:55:18 PDT
Created
attachment 51672
[details]
patch Same patch, without style errors this time, hopefully.
Dimitri Glazkov (Google)
Comment 5
2010-03-25 13:59:20 PDT
Comment on
attachment 51672
[details]
patch ok.
Dumitru Daniliuc
Comment 6
2010-03-25 15:30:15 PDT
Landed as
r56572
.
Simon Hausmann
Comment 7
2010-06-13 14:06:43 PDT
Revision
r56572
cherry-picked into qtwebkit-2.0 with commit 9917209df84aa5a739d112570394d9f57e99689b
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug