WebCore: Changing the V8 and JSC implementations of SQLStatementErrorCallback to interpret as false all results that could be converted to a false boolean. Pretty much a revert of r54981.

Reviewed by Dimitri Glazkov.

https://bugs.webkit.org/show_bug.cgi?id=36569

* bindings/js/JSCustomSQLStatementErrorCallback.cpp:
(WebCore::JSCustomSQLStatementErrorCallback::handleEvent):
* bindings/v8/custom/V8CustomSQLStatementErrorCallback.cpp:
(WebCore::V8CustomSQLStatementErrorCallback::handleEvent):
* bindings/v8/custom/V8CustomVoidCallback.cpp:
(WebCore::invokeCallback):
* bindings/v8/custom/V8CustomVoidCallback.h:

LayoutTests: Updating the test to conform to the latest spec changes.

Reviewed by Dimitri Glazkov.

* storage/statement-error-callback-expected.txt:
* storage/statement-error-callback.html:



Canonical link: https://commits.webkit.org/47866@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56572 268f45cc-cd09-0410-ab3c-d52691b4dbfc